force-app/main/default/objects/Access_Permit_Visit__c/Access_Permit_Visit__c.object-meta.xml
<CustomObject>
    <label>Access Permit Visit</label>
    <nameField>
        <label>Access Permit Visit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Access Permit Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>