force-app/main/default/objects/Access_Permit_Visit__c/fields/Access_Permit__c.field-meta.xml
<CustomField>
    <fullName>Access_Permit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Access Permit</label>
    <referenceTo>Access_Permit__c</referenceTo>
    <relationshipLabel>Access Permit</relationshipLabel>
    <relationshipName>Security_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>