force-app/main/default/objects/Access_Permit_Visit__c/fields/Check_Out_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_DateTime__c</fullName>
    <label>Check Out DateTime</label>
    <type>DateTime</type>
</CustomField>