force-app/main/default/objects/Access_Permit_Visit__c/fields/Company_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_ID_Number__c</fullName>
    <label>Company ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>