force-app/main/default/objects/Access_Permit_Visit__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>