force-app/main/default/objects/Access_Permit_Visit__c/fields/Trade_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Trade_License_Number__c</fullName>
    <label>Trade License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>